[tr064] fix wanBlockByIP channel and improvements to parameter handling (#9655)
- fix wanBlockByIP channel
- allow comments in parameter lists
- fix compiler warnings

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>
Signed-off-by: Andras Uhrin <andras.uhrin@gmail.com>